clusters/production/tarka/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tarka
  labels:
    name: tarka
    owner: platform
  annotations:
    linkerd.io/inject: disabled
